--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -2,14 +2,18 @@ FROM node:22-alpine
 
 WORKDIR /app
 
-# 依存関係をインストール
+# 依存関係をインストール（キャッシュ最適化のため先にpackage.jsonのみコピー）
 COPY package*.json ./
 RUN npm install
 
-# ソースコード
+# TypeScript設定ファイルとVite設定をコピー
+COPY tsconfig*.json vite.config.* ./
+
+# ソースコード全体をコピー
 COPY . .
 
-# ポート (開発サーバ)
+# 開発サーバーのポート
 EXPOSE 3000
 
+# Vite開発サーバーを起動（TypeScriptは自動でトランスパイルされる）
 CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "3000"]
