--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,4 +2,17 @@ spring:
   application:
     name: Backend Application
   datasource:
-    url: jdbc:mysql://localhost:3306/app_db?useSSL=false&allowPublicKeyRetrieval=true
+    url: ${JDBC_DATABASE_URL:jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:app_db}?useSSL=false&serverTimezone=Asia/Tokyo&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&connectionCollation=utf8mb4_unicode_ci}
+    username: ${JDBC_DATABASE_USERNAME:${DB_USER:root}}
+    password: ${JDBC_DATABASE_PASSWORD:${DB_PASSWORD:password}}
+    driver-class-name: ${JDBC_DATABASE_DRIVER:${DB_DRIVER:com.mysql.cj.jdbc.Driver}}
+
+  # JPA設定
+  jpa:
+    hibernate:
+      ddl-auto: ${JPA_DDL_AUTO:update} # 開発環境用。本番環境ではvalidateまたはnone推奨
+    show-sql: ${JPA_SHOW_SQL:true}
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: ${HIBERNATE_DIALECT:org.hibernate.dialect.MySQL8Dialect}
