--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,12 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/app_db?useSSL=false&allowPublicKeyRetrieval=true
-      SPRING_DATASOURCE_USERNAME: app_user
-      SPRING_DATASOURCE_PASSWORD: app_pass
+      DB_USER: app_user
+      DB_PASSWORD: app_pass
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_NAME: app_db
     depends_on:
       db:
         condition: service_healthy
@@ -43,6 +45,8 @@ services:
       MYSQL_USER: app_user
       MYSQL_PASSWORD: app_pass
       MYSQL_ROOT_PASSWORD: root_pass
+      TZ: Asia/Tokyo
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
