Jwt認証、ログイン機能の実装

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -16,3 +16,15 @@ spring:
       hibernate:
         format_sql: true
         dialect: ${HIBERNATE_DIALECT:org.hibernate.dialect.MySQL8Dialect}
+
+server:
+  port: ${SERVER_PORT:8080}
+  servlet:
+    context-path: /api
+
+jwt:
+  # JWT署名用の秘密鍵 (本番環境では環境変数から設定すること)
+  # 注意: この値は最低512ビット(64文字)必要
+  secret: ${JWT_SECRET:accounting-app-jwt-secret-key-for-development-environment-minimum-512-bits-required-please-change-in-production}
+  # トークン有効期限(ミリ秒) デフォルト: 24時間
+  expiration: ${JWT_EXPIRATION:86400000}
