--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       DB_HOST: db
       DB_PORT: 3306
       DB_NAME: app_db
+      SERVER_PORT: 8080
     depends_on:
       db:
         condition: service_healthy
