--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -78,7 +78,7 @@ jobs:
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "GitHub Actions"
-          git remote add heroku "https://heroku:${HEROKU_API_KEY}@git.heroku.com/${HEROKU_APP_NAME}.git"
+          heroku git:remote -a ${HEROKU_APP_NAME}
           git subtree push --prefix backend heroku main || git push heroku $(git subtree split --prefix backend main):refs/heads/main --force
 
       - name: Verify deployment
