--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -76,6 +76,13 @@ jobs:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
           HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
         run: |
+          cat > ~/.netrc <<EOF
+          machine api.heroku.com
+            password ${HEROKU_API_KEY}
+          machine git.heroku.com
+            password ${HEROKU_API_KEY}
+          EOF
+          chmod 600 ~/.netrc
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "GitHub Actions"
           heroku git:remote -a ${HEROKU_APP_NAME}
